# dawdle-server

./: .gitignore  Cargo.toml  LICENSE  README.md  dawdle.config.example.toml  dawdle.config.json  dawdle.config.toml  deploy.sh  docker.sh  stuff.sh
docker/user/: Dockerfile  entrypoint.sh
src/: api.rs  config.rs  containers.rs  main.rs  minecraft.rs  sftp.rs  ssh.rs  state.rs  utils.rs
src/app/: mod.rs  refinery_libsql.rs
src/app/core/: applications.rs  mod.rs  sessions.rs  users.rs
src/chat/: mod.rs  state.rs
src/default-home/: .zshrc
src/default-home/public/: style.css
src/default_home/: .zshrc  README.md
src/default_home/public/: index.html
src/migrations/: V1__initial.sql
src/ssg/: frontmatter.rs  markdown.rs  mod.rs  themes.rs
src/ssh/: mod.rs  session.rs  sftp.rs
src/state/: guestbook.rs  mod.rs  users.rs
src/web/: 404.html  api.rs  api_admin.rs  chat.rs  errors.rs  files.rs  middleware.rs  mod.rs  webdav.rs
