[package]
name="dawdle-server"
version="0.1.0"
edition="2021"

[[bin]]
name="dawdle-server"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tools
color-eyre="0.6.2"
env_logger="0.10.1"
log="0.4.20"
async-trait="0.1.74"
futures="0.3.29"
tokio={version="1", features=["full", "macros"]}
data-encoding="2.5"

# common dependencies
serde="1.0.193"
serde_json="1.0.64"
cuid2="0.1.2"
dashmap="5.5.3"
rand="0.8.5"
time={version="0.3.30", features=["serde"]}
argon2={version="0.5.2", features=["std"]}
okv={version="0.3", features=["rocksdb", "serde_json"]}

# ssh server dependencies
bollard="0.15.0"
ed25519-dalek="2.1.0"
russh="0.40.0"
russh-keys="0.40.0"
russh-sftp="1.2.1"
ssh-key={version="0.6.3", features=["ed25519"]}

# webdav
dav-server={branch="feature/http-1.0", git="https://github.com/dawdlestudios/dav-server-rs"}

# web dependencies
tower="0.4.13"
axum={version="0.7.2", features=["macros", "ws"]}
axum-extra={version="0.9", features=["cookie", "typed-header"]}
addr="0.15.6"
percent-encoding="2.3.1"
httpdate="1.0.3"
mime_guess="2.0.4"
http-range-header="0.4.0"
tokio-util={version="0.7.10", features=["io"]}

[profile.release]
strip=true
lto=true
