[package]
name="dawdle-server"
version="0.1.0"
edition="2021"

[[bin]]
name="dawdle-server"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql={version="0.5", default-features=false, features=["core", "stream"]}
refinery="0.8"
refinery-core="0.8"

# tools 
eyre="0.6"
env_logger="0.11"
log="0.4"
async-trait="0.1"
futures="0.3"
tokio={version="1.38", features=["full", "macros"]}
data-encoding="2.6"

# common dependencies
serde="1.0"
serde_json="1.0"
toml="0.5"
serde_yml="0.0.12"
cuid2="0.1"
dashmap="6.0"
rand="0.8"
time={version="0.3", features=["serde"]}
argon2={version="0.5", features=["std"]}

# ssh server dependencies
bollard="0.17"
ed25519-dalek="2.1"
russh="0.45"
russh-keys="0.45"
russh-sftp="2.0"
ssh-key={version="0.6", features=["ed25519"]}

# webdav
dav-server={version="0.7"}

# web dependencies
tower-http={version="0.5", features=["set-header"]}
tower={version="0.5", features=["util"]}
axum={version="0.7", features=["macros", "ws"]}
axum-extra={version="0.9", features=["cookie", "typed-header"]}
addr="0.15"
percent-encoding="2.3"
httpdate="1.0"
mime_guess="2.0"
http-range-header="0.4"
tokio-util={version="0.7", features=["io"]}
comrak="0.27.0"

[profile.release]
strip=true
lto=true
